.k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flashcards-api-deployment
  namespace: flashcards
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flashcards-api
  template:
    metadata:
      labels:
        app: flashcards-api
    spec:
      containers:
        - name: flashcards-api
          image: digitalphoenixx/flashcards-api:latest
          imagePullPolicy: "IfNotPresent"
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
