.k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flashcards-api-service
  namespace: flashcards
spec:
  selector:
    app: flashcards-api
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
