.k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flashcards-api-ingress
  namespace: flashcards
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: flashcards-api.digitalphoenixx.live
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: flashcards-api-service
            port:
              number: 8000
